# temporay-email-service

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
docs/screenshots/: .gitkeep
frontend/: .dockerignore  dockerfile
frontend/src/: App.css  App.jsx  config.js
frontend/src/components/: EmailDetail.jsx  InputBox.jsx  MailBox.jsx
tempmail/: .dockerignore  api.http  celerybeat-schedule  dockerfile  requirements.txt
tempmail/api/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
tempmail/api/management/commands/: smtp.py
tempmail/api/migrations/: 0001_initial.py  0002_alter_message_receiver.py  0003_alter_mailbox_expires_at.py
tempmail/script/: smtp.py
tempmail/tempmail/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
