[project]
name = "temp-mail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.1",
    "names>=0.3.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "django-celery-beat>=2.6.0",
]
